--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,46 @@
-server.port=${PORT:8083}
+server.port=8083
 spring.application.name=voting-system-user-service
 
-# ✅ DATABASE_URL será injetado pelo Railway
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/userdb}
-spring.datasource.username=${DB_USERNAME:voting_user}
-spring.datasource.password=${DB_PASSWORD:user}
-
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
-
-# Eureka - apontando para URL do Railway
-eureka.client.serviceUrl.defaultZone=${EUREKA_URL:http://localhost:8761/eureka}
+# Eureka - apontando para localhost
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.instance.preferIpAddress=true
-eureka.instance.hostname=${RAILWAY_STATIC_URL:localhost}
+eureka.client.initial-instance-info-replication-interval-seconds=5
+eureka.client.registry-fetch-interval-seconds=5
+
+
+# 10 minutos
+server.connection-timeout=600s
+server.tomcat.connection-timeout=600000
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/userdb
+
+# Credenciais do NOVO usuário
+spring.datasource.username=voting_user
+spring.datasource.password=user
+
+# Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configurações JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+# Actuator
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.health.db.enabled=true
+
+# Métricas
+management.metrics.export.prometheus.enabled=true
+
+# Swagger
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
+springdoc.swagger-ui.url=/v3/api-docs
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.try-it-out-enabled=true
+
+# Logging
+logging.level.org.springframework=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
