--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,28 @@
-server.port=8083
+# Porta dinâmica do Render
+server.port=${PORT:8083}
 spring.application.name=voting-system-user-service
 
-# Eureka - apontando para localhost
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+# Eureka
+eureka.client.serviceUrl.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:https://voting-system-discovery.onrender.com/eureka}
 eureka.instance.preferIpAddress=true
 eureka.client.initial-instance-info-replication-interval-seconds=5
 eureka.client.registry-fetch-interval-seconds=5
 
+# Timeouts
+server.connection-timeout=${SERVER_CONNECTION_TIMEOUT:600s}
+server.tomcat.connection-timeout=${SERVER_TOMCAT_TIMEOUT:600000}
 
-# 10 minutos
-server.connection-timeout=600s
-server.tomcat.connection-timeout=600000
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/userdb
-
-# Credenciais do NOVO usuário
-spring.datasource.username=voting_user
-spring.datasource.password=user
-
-# Driver
+# Banco de Dados (Render)
+spring.datasource.url=jdbc:postgresql://dpg-d2l6tun5r7bs73dcq26g-a.oregon-postgres.render.com:5432/eleicoes_dmim
+spring.datasource.username=user_eleicoes
+spring.datasource.password=FfjakX7gJLAcD9AmQkqW9G2uNYuCWPya
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configurações JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
 # Actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
