--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=${PORT:8083}
 spring.application.name=voting-system-user-service
 
 # Eureka
-eureka.client.serviceUrl.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:https://voting-system-discovery.onrender.com/eureka}
+eureka.client.serviceUrl.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:https://voting-system-discovery.onrender.com}
 eureka.instance.preferIpAddress=true
 eureka.client.initial-instance-info-replication-interval-seconds=5
 eureka.client.registry-fetch-interval-seconds=5
@@ -42,3 +42,6 @@ springdoc.swagger-ui.try-it-out-enabled=true
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
