--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,11 @@
 server.port=${PORT:8083}
 spring.application.name=voting-system-user-service
 
-# Eureka
-eureka.client.serviceUrl.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:https://voting-system-discovery.onrender.com}
-eureka.instance.preferIpAddress=true
+# Eureka Client
+eureka.client.serviceUrl.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:https://voting-system-discovery.onrender.com/eureka/}
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.prefer-ip-address=true
 eureka.client.initial-instance-info-replication-interval-seconds=5
 eureka.client.registry-fetch-interval-seconds=5
 
