--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 server.port=${PORT:8083}
 spring.application.name=voting-system-user-service
 
+server.address=0.0.0.0
+
 # Eureka Client
 eureka.client.serviceUrl.defaultZone=${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:https://voting-system-discovery.onrender.com/eureka/}
 eureka.client.register-with-eureka=true
