--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,10 +43,10 @@ springdoc.swagger-ui.url=/v3/api-docs
 springdoc.swagger-ui.display-request-duration=true
 springdoc.swagger-ui.try-it-out-enabled=true
 
-# Logging (níveis seguros para produção)
-logging.level.root=INFO
-logging.level.org.springframework.web=INFO
+# Logging
+logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
