--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,9 +29,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # Actuator
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.health.show-details=always
 management.health.db.enabled=true
+management.metrics.tags.application=${spring.application.name}
 
 # Métricas
 management.metrics.export.prometheus.enabled=true
@@ -47,6 +48,3 @@ springdoc.swagger-ui.try-it-out-enabled=true
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-management.endpoints.web.exposure.include=health,info
-management.endpoint.health.show-details=always
