--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,6 +34,8 @@ management.endpoint.health.show-details=always
 management.health.db.enabled=true
 management.metrics.tags.application=${spring.application.name}
 
+management.prometheus.metrics.export.enabled=true
+
 # Métricas
 management.metrics.export.prometheus.enabled=true
 
