--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,13 +28,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Actuator
-management.endpoints.web.exposure.include=health,info,prometheus
+# Actuator 
+management.endpoints.web.exposure.include=health,info,prometheus,metrics,env
 management.endpoint.health.show-details=always
-management.health.db.enabled=true
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
 management.metrics.tags.application=${spring.application.name}
-
-management.prometheus.metrics.export.enabled=true
 
 # Métricas
 management.metrics.export.prometheus.enabled=true
