--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
         <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
     </dependency>
 
+    <!-- Adicione esta dependência na seção <dependencies> -->
+<dependency>
+    <groupId>io.micrometer</groupId>
+    <artifactId>micrometer-registry-prometheus</artifactId>
+</dependency>
+
         <!-- Dependências explícitas do Jackson -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
