--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,3 +49,9 @@ springdoc.swagger-ui.try-it-out-enabled=true
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+management.prometheus.metrics.export.step=15s
+management.prometheus.metrics.export.remote-write.url=${PROMETHEUS_REMOTE_URL}
+management.prometheus.metrics.export.remote-write.user=${PROMETHEUS_REMOTE_USER}
+management.prometheus.metrics.export.remote-write.password=${PROMETHEUS_REMOTE_PASSWORD}
