--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,15 +25,19 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configurações JPA
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
 
-# Actuator 
-management.endpoints.web.exposure.include=health,info,prometheus,metrics,env
-management.endpoint.health.show-details=always
+# Ativar endpoint local (debug)
+management.endpoints.web.exposure.include=prometheus,health,info,metrics
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
-management.metrics.tags.application=${spring.application.name}
+
+# Remote Write para Grafana Cloud
+management.prometheus.metrics.export.enabled=true
+management.prometheus.metrics.export.step=15s
+management.prometheus.metrics.export.remote-write.url=${PROMETHEUS_REMOTE_URL}
+management.prometheus.metrics.export.remote-write.username=${PROMETHEUS_REMOTE_USER}
+management.prometheus.metrics.export.remote-write.password=${PROMETHEUS_REMOTE_PASSWORD}
 
 # Métricas
 management.metrics.export.prometheus.enabled=true
@@ -50,8 +54,3 @@ logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-
-management.prometheus.metrics.export.step=15s
-management.prometheus.metrics.export.remote-write.url=${PROMETHEUS_REMOTE_URL}
-management.prometheus.metrics.export.remote-write.user=${PROMETHEUS_REMOTE_USER}
-management.prometheus.metrics.export.remote-write.password=${PROMETHEUS_REMOTE_PASSWORD}
